--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gl-matrix": "^3.4.4",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "meshline": "^3.3.1",
     "motion": "^12.23.25",
     "ogl": "^1.0.11",
