--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "three": "^0.181.2",
+    "valtio": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
